infra/k3s/overlays/prod/glitchtip/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glitchtip-http-redirect
  namespace: boringstack-prod
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`glitchtip.boringstack.example.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: glitchtip-web
          port: 8000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glitchtip
  namespace: boringstack-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`glitchtip.boringstack.example.com`)
      kind: Rule
      middlewares:
        - name: security-headers
      services:
        - name: glitchtip-web
          port: 8000
  tls:
    secretName: boringstack-tls
